corrected image+text overlapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -148,8 +148,8 @@ a:hover {
   max-width: 400px;
 }
 
-.max-width-600 {
-  max-width: 600px;
+.max-width-500 {
+  max-width: 500px;
 }
 
 .bold {
